--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,16 @@ before_install:
 
 script:
     - docker run -e CI=true cherubini/docker-react npm run test
+
+deploy:
+    provider: elasticbeanstalk
+    region: "us-east-1"
+    app: "docker-react"
+    env: "DockerReact-env"
+    bucket_name: "elasticbeanstalk-us-east-1-737292368773"
+    bucket_path: "docker-react"
+    on:
+        branch: master
+    access_key_id: "$access_key_id"
+    secret_access_key: 
+        secure: "$secret_access_key"
